minimal working example

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -7,17 +7,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
+    "#%matplotlib ipympl\n",
     "import numpy as np\n",
     "from numpy.fft import  ifft2, ifftshift\n",
-    "from scipy.special import kv as beselk\n",
+    "#from scipy.special import kv as beselk\n",
     "from matplotlib import pyplot as plt\n",
-    "from ipywidgets import interact, widgets\n",
-    "from ows import ows"
+    "#from ipywidgets import interact, widgets\n",
+    "#from ows import ows"
    ]
   },
   {
@@ -25,22 +25,15 @@
    "metadata": {},
    "source": [
     "## PSD\n",
-    "Phase power spectrum"
+    "Power spectrum density"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dim = 128  # Matrix size\n",
-    "pupil_matrix_size = 128\n",
-    "r0 = 0.1\n",
-    "L0 = -1\n",
-    "\n",
-    "PSD = ows.PSD(dim, r0, L0)\n",
-    "\n",
     "def psdtemp(dim, r0, L0 = -1):\n",
     "    \"\"\"\n",
     "    Generates a Phase power spectrum (PSD).\n",
@@ -56,12 +49,18 @@
     "    Returns:\n",
     "    phase_screen (ndarray): 2D array representing the generated phase screen.\n",
     "    \"\"\"    \n",
-    "    #TODO: MAke it work with L0 != -1\n",
+    "\n",
+    "\n",
+    "    # 2025.03.14 - Original version based on paola.pro (22.12.2022) by Laurent Jolissaint (HES-SO), lines 3659+\n",
+    "    # Not sure where all the coefficients come from\n",
+    "    #TODO: Make it work with L0 != -1\n",
+    "    #TODO: Change inherited variable names to something more meaningful\n",
+    "\n",
     "\n",
     "    # Prepare the x direction coordinate matrix\n",
     "    x = np.linspace(-1, 1, dim).astype(np.double)#*dim/(2*dim)\n",
     "    y = np.linspace(-1, 1, dim).astype(np.double)#*dim/(2*dim)\n",
-    "    fpcoohfx, fpcoohfy = np.meshgrid(x,y)\n",
+    "    fpcoohfx, fpcoohfy = np.meshgrid(x,y) # Since it will be computed anyways, fpcoohfy will be used instead of rotating the xmatrix.\n",
     "\n",
     "    # Prepare the radius matrix\n",
     "    xpcoohf = np.zeros((dim,dim))\n",
@@ -70,10 +69,10 @@
     "            xpcoohf[i][j]= np.sqrt(fpcoohfx[i][j]**2 + fpcoohfy[i][j]**2)  # pupil plane coordianate radius\n",
     "\n",
     "    fpcoohfx *=pupil_matrix_size # Scale the grid to the size of the pupil matrix\n",
-    "    fpcoohfy *=pupil_matrix_size\n",
+    "    fpcoohfy *=pupil_matrix_size # Scale the grid to the size of the pupil matrix\n",
     "    xpcoohf *=pupil_matrix_size # Scale the grid to the size of the pupil matrix\n",
     "\n",
-    "    # Von Karmàn corrected PSD (L0 != -1) PAOLA:3666\n",
+    "    # Von Karman corrected PSD (L0 != -1) PAOLA:3666\n",
     "    #Watm = np.zeros((dim,dim), dtype=np.double)\n",
     "    if L0 == -1:\n",
     "        #w = np.where(fpcoohf[0]**2+fpcoohf.T[0]**2 > 0)\n",
@@ -83,12 +82,19 @@
     "        w = np.where(xpcoohf != 0)\n",
     "        dphi = 0.171661*(L0/r0)**(5/3)*((1.005635)-(2*np.pi*xpcoohf/L0))**(5/6)\n",
     "                               #beselk(5/6,2*np.pi*xpcoohf/L0)\n",
+    "        #Original line:\n",
+    "        # if w[0] ne -1 then dphi[w] = 0.171661d*(double(L0)/r0LAM)^(5.d/3)*((1.005635d)-(2*!dpi*xpcoohf[w]/double(L0))^(5.d/6)*$beselk(2*!dpi*xpcoohf[w]/double(L0),5.d/6))\n",
     "        Watm = 0.022896/(r0**(5/3))*(fpcoohfx**2+fpcoohfy**2 +1/(L0**2))**(-11/3)\n",
     "\n",
     "    PSD = Watm\n",
+    "    return PSD\n",
     "\n",
+    "dim = 128  # Matrix size\n",
+    "pupil_matrix_size = 128\n",
+    "r0 = 0.1\n",
+    "L0 = -1\n",
     "\n",
-    "    return PSD"
+    "PSD = psdtemp(dim, r0, L0)"
    ]
   },
   {
@@ -100,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,8 +186,8 @@
     }
    ],
    "source": [
-    "#;FUNCTION WAVE(PSD,DFP[,D1=,D2=,TSCPUP=,STATIC=,VIBRATION=,SEED=,/SPECTRUM])\n",
-    "\n",
+    "# Replace tmp1 and tmp2 to be more explicit\n",
+    "# They are currenty used in order to make it easier to compare with the original code\n",
     "rad2asec = 3600 * 180/np.pi\n",
     "asec2rad = 1/rad2asec\n",
     "\n",
@@ -212,7 +218,7 @@
     "# (2) the imaginary part of phase spectrum is forced to be odd\n",
     "tmp2 =  (tmp1 * np.cos(0.5 * (tmp2 - tmp2.T)))[0 : dim, 0 : dim] +1j*(tmp1 * np.sin(0.5 * (tmp2 - tmp2.T)))[0 : dim, 0 : dim]\n",
     "phaseft = tmp2\n",
-    "#phaseft -= np.mean(phaseft)\n",
+    "#phaseft -= np.mean(phaseft) # remove piston?\n",
     "phase_screen = ifft2(ifftshift(phaseft))\n",
     "\n",
     "plt.close(1)\n",
@@ -242,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
