--- a/temp.ipynb
+++ b/temp.ipynb
@@ -56,11 +56,11 @@
     "\n",
     "PSD = ows.psd(dimmat, dxp, r0, wl)\n",
     "\n",
-    "plt.close(1)\n",
-    "plt.figure(1)\n",
-    "plt.imshow(PSD**(1/8))\n",
-    "plt.title(\"Phase spectrum density ^(1/8)\")\n",
-    "plt.colorbar()"
+    "# plt.close(1)\n",
+    "# plt.figure(1)\n",
+    "# plt.imshow(PSD**(1/1))\n",
+    "# plt.title(\"Phase spectrum density ^(1/8)\")\n",
+    "# plt.colorbar()"
    ]
   },
   {
@@ -99,10 +99,10 @@
     "plt.title(\"Imaginary part of phase screen\")\n",
     "plt.colorbar()\n",
     "plt.show()\n",
-    "\n",
+    "print(psf.shape)\n",
     "plt.close(4)\n",
     "plt.figure(4)\n",
-    "plt.imshow((np.abs(psf)**(1/1)))\n",
+    "plt.imshow((np.abs(psf)**(1/2)))\n",
     "plt.title(\"PSF\")\n",
     "plt.colorbar()\n",
     "plt.show()\n"
