--- a/temp.ipynb
+++ b/temp.ipynb
@@ -44,23 +44,25 @@
     "r0 = .1\n",
     "L0 = -1\n",
     "\n",
-    "FoV = 60 # arcsec\n",
-    "Npx = 100 # image plane pixels qty\n",
+    "FoV = 25 # arcsec\n",
+    "Npx = 1000 # image plane pixels qty\n",
     "\n",
-    "Daf = 0.01#asec2rad*FoV/Npx # [rad/px]  (Numerical aperture)\n",
+    "Daf = asec2rad*FoV/Npx # [rad/px]  (Numerical aperture)\n",
     "wl = 500e-9 # [m]\n",
     "\n",
     "dfp = Daf/wl # [/m] Pupil plane spatial frequency pixel size (Numerical aperture/WL)\n",
     "dxp = 1/(dfp*dimmat) # Pupil plane pixel size\n",
     "#DFP = 1/dxp/dimmat\n",
-    "\n",
+    "#D = dimmat\n",
+    "#dxp = D/dimmat\n",
+    "print(dxp)\n",
     "PSD = ows.psd(dimmat, dxp, r0, wl)\n",
     "\n",
-    "# plt.close(1)\n",
-    "# plt.figure(1)\n",
-    "# plt.imshow(PSD**(1/1))\n",
-    "# plt.title(\"Phase spectrum density ^(1/8)\")\n",
-    "# plt.colorbar()"
+    "plt.close(1)\n",
+    "plt.figure(1)\n",
+    "plt.imshow(PSD**(1/8))\n",
+    "plt.title(\"Phase spectrum density ^(1/8)\")\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -76,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEED = None\n",
+    "SEED = 1\n",
     "\n",
     "start = time.time()\n",
     "\n",
@@ -88,24 +90,49 @@
     "print(\"Processingtime :\",\n",
     "      (end-start) * 10**3, \"ms\")\n",
     "\n",
-    "plt.close(3)\n",
-    "plt.figure(3)\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow((phase_screen.real))\n",
-    "plt.title(\"Real part of phase screen\")\n",
-    "plt.colorbar()\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.imshow((phase_screen.imag))\n",
-    "plt.title(\"Imaginary part of phase screen\")\n",
-    "plt.colorbar()\n",
-    "plt.show()\n",
-    "print(psf.shape)\n",
     "plt.close(4)\n",
     "plt.figure(4)\n",
+    "plt.imshow(phase_screen)\n",
+    "plt.title(\"phase screen\")\n",
+    "plt.colorbar()\n",
+    "plt.show()\n",
+    "plt.close(5)\n",
+    "plt.figure(5)\n",
     "plt.imshow((np.abs(psf)**(1/2)))\n",
-    "plt.title(\"PSF\")\n",
+    "plt.title(\"PSF^(1/2)\")\n",
     "plt.colorbar()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.io import fits\n",
+    "\n",
+    "def normalize(data):\n",
+    "    min_val = np.min(data)\n",
+    "    max_val = np.max(data)\n",
+    "    return (data - min_val) / (max_val - min_val)\n",
+    "\n",
+    "phase_screen_normilized = normalize(phase_screen)\n",
+    "psf_normalized = normalize(psf)\n",
+    "\n",
+    "fits.writeto('data/phase_screen.fits', phase_screen, overwrite=True)\n",
+    "fits.writeto('data/phase_screen_normalized.fits', phase_screen_normilized, overwrite=True)\n",
+    "fits.writeto('data/psf.fits', psf, overwrite=True)\n",
+    "fits.writeto('data/psf_normalized.fits', psf_normalized, overwrite=True)\n",
+    "\n",
+    "input_infos = f\"ro,{r0:f},m\\nWL,{wl:g},m\\ndxp,{dxp:f},\\nseed,{1},\"\n",
+    "with open('data/inputs.txt', 'w') as f:\n",
+    "    f.write(input_infos)"
    ]
   }
  ],
@@ -125,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
