--- a/temp.ipynb
+++ b/temp.ipynb
@@ -39,30 +39,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dimmat = 2**7   # Matrix size\n",
-    "\n",
-    "r0 = .1\n",
+    "r0 = .3\n",
     "L0 = -1\n",
-    "\n",
-    "FoV = 25 # arcsec\n",
-    "Npx = 1000 # image plane pixels qty\n",
-    "\n",
-    "Daf = asec2rad*FoV/Npx # [rad/px]  (Numerical aperture)\n",
+    "D = 1.\n",
     "wl = 500e-9 # [m]\n",
     "\n",
-    "dfp = Daf/wl # [/m] Pupil plane spatial frequency pixel size (Numerical aperture/WL)\n",
-    "dxp = 1/(dfp*dimmat) # Pupil plane pixel size\n",
-    "#DFP = 1/dxp/dimmat\n",
-    "#D = dimmat\n",
-    "#dxp = D/dimmat\n",
-    "print(dxp)\n",
-    "PSD = ows.psd(dimmat, dxp, r0, wl)\n",
+    "FoV = 25*asec2rad # arcsec\n",
+    "#Npx = 1000 # image plane pixels qty\n",
+    "#Daf = asec2rad*FoV#/Npx # [rad/px]  (Numerical aperture)\n",
     "\n",
-    "plt.close(1)\n",
-    "plt.figure(1)\n",
-    "plt.imshow(PSD**(1/8))\n",
-    "plt.title(\"Phase spectrum density ^(1/8)\")\n",
-    "plt.colorbar()"
+    "\n",
+    "\n",
+    "Daf = wl/(2*D) # max\n",
+    "\n",
+    "dfp = Daf/wl # [/m] Pupil plane spatial frequency pixel size (Numerical aperture/WL)\n",
+    "\n",
+    "dimpsf = 8*wl*np.sqrt((D/r0)**2 + 1)/(Daf*D)   # (min pasf size) Matrix size \n",
+    "dimmat = int(dimpsf)+int((dimpsf %1 !=0)*1)\n",
+    "dimmat += int((dimmat %2 != 0)*1)\n",
+    "\n",
+    "dimmat = 512\n",
+    "# TODO: découplet dimmat et dimpsf ?\n",
+    "dxp = 1/(dfp*dimmat) # Pupil plane pixel size\n",
+    "print(\"FoV: \", Daf*dimmat*rad2asec)\n",
+    "\n",
+    "print(\"dimmat: \", dimmat)\n",
+    "print(\"Daf: \", Daf)\n",
+    "print(\"dxp: \", dxp)\n",
+    "PSD = ows.psd(dimmat, dxp, r0, wl)\n",
+    "#PSD[dimmat//2-1:dimmat//2+1,dimmat//2-1:dimmat//2+1] = 0\n",
+    "# plt.close(1)\n",
+    "# plt.figure(1)\n",
+    "# plt.imshow(PSD**(1/8))\n",
+    "# plt.title(\"Phase spectrum density ^(1/8)\")\n",
+    "# plt.colorbar()"
    ]
   },
   {
@@ -92,7 +102,12 @@
     "\n",
     "plt.close(4)\n",
     "plt.figure(4)\n",
-    "plt.imshow(phase_screen)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(phase_screen.real)\n",
+    "plt.title(\"phase screen\")\n",
+    "plt.colorbar()\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(phase_screen.imag)\n",
     "plt.title(\"phase screen\")\n",
     "plt.colorbar()\n",
     "plt.show()\n",
@@ -117,22 +132,22 @@
    "source": [
     "from astropy.io import fits\n",
     "\n",
-    "def normalize(data):\n",
-    "    min_val = np.min(data)\n",
-    "    max_val = np.max(data)\n",
-    "    return (data - min_val) / (max_val - min_val)\n",
+    "# def normalize(data):\n",
+    "#     min_val = np.min(data)\n",
+    "#     max_val = np.max(data)\n",
+    "#     return (data - min_val) / (max_val - min_val)\n",
     "\n",
-    "phase_screen_normilized = normalize(phase_screen)\n",
-    "psf_normalized = normalize(psf)\n",
+    "# phase_screen_normilized = normalize(phase_screen)\n",
+    "# psf_normalized = normalize(psf)\n",
     "\n",
-    "fits.writeto('data/phase_screen.fits', phase_screen, overwrite=True)\n",
-    "fits.writeto('data/phase_screen_normalized.fits', phase_screen_normilized, overwrite=True)\n",
+    "# fits.writeto('data/phase_screen.fits', phase_screen, overwrite=True)\n",
+    "# fits.writeto('data/phase_screen_normalized.fits', phase_screen_normilized, overwrite=True)\n",
     "fits.writeto('data/psf.fits', psf, overwrite=True)\n",
-    "fits.writeto('data/psf_normalized.fits', psf_normalized, overwrite=True)\n",
+    "# fits.writeto('data/psf_normalized.fits', psf_normalized, overwrite=True)\n",
     "\n",
-    "input_infos = f\"ro,{r0:f},m\\nWL,{wl:g},m\\ndxp,{dxp:f},\\nseed,{1},\"\n",
-    "with open('data/inputs.txt', 'w') as f:\n",
-    "    f.write(input_infos)"
+    "# input_infos = f\"ro,{r0:f},m\\nWL,{wl:g},m\\ndxp,{dxp:f},\\nseed,{1},\"\n",
+    "# with open('data/inputs.txt', 'w') as f:\n",
+    "#     f.write(input_infos)"
    ]
   }
  ],
