Added wavefront slope computation
Wavefront slope computation working.

still need to:
1. add rectangular matrices
2. check spot field formula
3. do some cleanup.

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -39,7 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start = time.time()\n",
     "# Input\n",
+    "\n",
     "dimmat = 128\n",
     "dxp = 0.03222887597610881 # Pupil plane pixel size\n",
     "r0 = .1\n",
@@ -63,12 +65,11 @@
     "\n",
     "\n",
     "PSD = ows.psd(dimmat, dxp, r0, wl)\n",
-    "#PSD[dimmat//2-1:dimmat//2+1,dimmat//2-1:dimmat//2+1] = 0\n",
-    "plt.close(1)\n",
-    "plt.figure(1)\n",
-    "plt.imshow(PSD**(1/8))\n",
-    "plt.title(\"Phase spectrum density ^(1/8)\")\n",
-    "plt.colorbar()"
+    "# plt.close(1)\n",
+    "# plt.figure(1)\n",
+    "# plt.imshow(PSD**(1/8))\n",
+    "# plt.title(\"Phase spectrum density ^(1/8)\")\n",
+    "# plt.colorbar()"
    ]
   },
   {
@@ -86,29 +87,24 @@
    "source": [
     "SEED = 1\n",
     "\n",
-    "start = time.time()\n",
-    "\n",
-    "[phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True, PD = [127,40])\n",
-    "\n",
-    "end = time.time()\n",
     "\n",
     "\n",
-    "print(\"Processingtime :\",\n",
-    "      (end-start) * 10**3, \"ms\")\n",
+    "[phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True,)\n",
     "\n",
-    "plt.close(4)\n",
-    "plt.figure(4)\n",
-    "plt.imshow(phase_screen.real)\n",
-    "plt.title(\"phase screen\")\n",
-    "plt.colorbar()\n",
     "\n",
-    "plt.show()\n",
-    "plt.close(5)\n",
-    "plt.figure(5)\n",
-    "plt.imshow((np.abs(psf)**(1/2)))\n",
-    "plt.title(\"PSF^(1/2)\")\n",
-    "plt.colorbar()\n",
-    "plt.show()\n"
+    "# plt.close(4)\n",
+    "# plt.figure(4)\n",
+    "# plt.imshow(phase_screen.real)\n",
+    "# plt.title(\"phase screen\")\n",
+    "# plt.colorbar()\n",
+    "\n",
+    "# plt.show()\n",
+    "# plt.close(5)\n",
+    "# plt.figure(5)\n",
+    "# plt.imshow((np.abs(psf)**(1/2)))\n",
+    "# plt.title(\"PSF^(1/2)\")\n",
+    "# plt.colorbar()\n",
+    "# plt.show()\n"
    ]
   },
   {
@@ -156,28 +152,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import itertools\n",
+    "# Wavefront slope\n",
     "\n",
-    "N = 16\n",
+    "1. Simulating the lenslet array\n",
+    "\n",
+    "\n",
+    "???\n",
+    "$$W_f= PH\\star L$$\n",
+    "\n",
+    "???\n",
+    "\n",
+    "2. Compute the spot centers\n",
+    "\n",
+    "$$x_{c,k} = \\frac{\\sum_{i\\in k}\\sum_{j\\in k} x_{i,j}I_{i,j}}{\\sum_{i\\in k}\\sum_{j\\in k} I_{i,j}}$$\n",
+    "\n",
+    "$$y_{c,k} = \\frac{\\sum_{i\\in k}\\sum_{j \\in k} y_{i,j}I_{i,j}}{\\sum_{i\\in k}\\sum_{j\\in k} I_{i,j}}$$\n",
+    "\n",
+    "3. Extract the WF slopes\n",
+    "\n",
+    "$$ \\begin{bmatrix}\\partial w /\\partial x \\\\ \\partial w/\\partial y\\end{bmatrix}_k = \\begin{bmatrix} \\beta_x\\\\\\beta_y \\end{bmatrix}_k \\approx \\frac{1}{L_H}\\begin{bmatrix} x_c - x_r\\\\y_c - y_r \\end{bmatrix}_k$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ows import fouriertransform as mathft\n",
+    "# TODO: Focus the sub-aperture with a lens of only fft ?\n",
+    "# TODO: Check wether R need to be relative to the lenslet or the puppil\n",
+    "### 1. focussing the sub-apetures + aperture centres\n",
+    "focal_length = 8e-3 #[m]\n",
+    "N = 18\n",
     "m = int(np.ceil(dimmat/N)) # By definition, the number of lenslets must be an integer\n",
-    "if N%2 != 0:\n",
+    "if N%2 == 0:\n",
     "    padded_dim = m*(N) # N+1 in order to have a lenslet centered on the optical axis\n",
     "else:\n",
     "    padded_dim = m*(N+1)\n",
-    "print(f\"Number of pixels per lenslets axis: {m}\")\n",
     "\n",
     "# Pad the pupil mask for illuminaiton computation\n",
     "padded_mask = np.zeros((padded_dim,padded_dim),int)\n",
     "padded_mask[(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat,(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat] = pupil_mask\n",
     "\n",
     "padded_phase_screen = np.zeros_like(padded_mask,np.float64)\n",
-    "\n",
     "padded_phase_screen[(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat,(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat] = phase_screen\n",
     "\n",
-    "\n",
     "lenslet_mask = np.zeros_like(padded_mask)\n",
-    "lenslet_matrix = np.zeros((N,N))\n",
+    "active_lenslet_matrix = np.zeros((N,N))\n",
     "\n",
     "ii=0\n",
     "for i in range(0, padded_dim, m):\n",
@@ -186,14 +214,13 @@
     "        lenslet = padded_mask[i:i+m, j:j+m]\n",
     "        if (lenslet.sum() >= (m*m)/2):\n",
     "            lenslet_mask[i:i+m, j:j+m] = 1\n",
-    "            lenslet_matrix[ii,jj] = 1\n",
+    "            active_lenslet_matrix[ii,jj] = 1\n",
     "        jj += 1\n",
     "    ii +=1\n",
     "\n",
-    "\n",
     "plt.close(6)\n",
     "plt.figure(6)\n",
-    "plt.subplot(2,2,1)\n",
+    "plt.subplot(1,2,1)\n",
     "for i in range(1,N+1):\n",
     "    x = [0, padded_dim] \n",
     "    y = [m*i, m*i] \n",
@@ -204,8 +231,7 @@
     "    plt.plot(x, y, 'darkred', linewidth=2)\n",
     "plt.imshow(padded_mask)\n",
     "plt.title(\"Padded pupil mask\")\n",
-    "\n",
-    "plt.subplot(2,2,2)\n",
+    "plt.subplot(1,2,2)\n",
     "for i in range(1,N+1):\n",
     "    x = [0, padded_dim] \n",
     "    y = [m*i, m*i] \n",
@@ -215,15 +241,7 @@
     "    y = [0, padded_dim] \n",
     "    plt.plot(x, y, 'darkred', linewidth=2)\n",
     "plt.imshow(lenslet_mask)\n",
-    "plt.title(\"Padded Lenslet mask\")\n",
-    "\n",
-    "plt.subplot(2,2,3)\n",
-    "plt.imshow(lenslet_matrix)\n",
-    "plt.minorticks_on()\n",
-    "plt.grid(which='minor', linestyle='-', alpha=0.5)\n",
-    "plt.grid(which='major', linestyle='-', alpha=0.5)\n",
-    "plt.title(\"Padded lenslet matrix\")\n",
-    "plt.show()\n",
+    "plt.title(\"Padded lenslet mask\")\n",
     "\n",
     "plt.close(7)\n",
     "plt.figure(7)\n",
@@ -237,22 +255,63 @@
     "    plt.plot(x, y, 'darkred', linewidth=2)\n",
     "plt.imshow(padded_phase_screen*lenslet_mask,cmap=\"grey\")\n",
     "plt.title(\"Padded phase screen\\n masked for illumination >= 50% lenslet\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "padded_R = np.zeros_like(padded_phase_screen,np.float64)\n",
+    "padded_R[(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat,(padded_dim-dimmat)//2:(padded_dim-dimmat)//2 + dimmat] = R\n",
+    "padded_lightfield = np.zeros_like(padded_phase_screen,np.float64)\n",
+    "k_max = N*N\n",
+    "k = 8\n",
+    "\n",
+    "pad = 4\n",
+    "sub_ps = np.zeros((pad*m,pad*m))\n",
+    "sub_R = np.zeros_like(sub_ps)\n",
+    "\n",
+    "active_lenslet_matrix_1D = active_lenslet_matrix.reshape(N*N)\n",
+    "Xc = np.zeros((active_lenslet_matrix_1D.shape[0]))\n",
+    "Yc = np.zeros_like(Xc)\n",
+    "k = 0\n",
+    "for j in range(0, padded_dim, m):\n",
+    "    for i in range(0, padded_dim, m):\n",
+    "        if int(active_lenslet_matrix_1D[k]) == 1:\n",
+    "            Xc[k] = i+m/2\n",
+    "            Yc[k] = j+m/2\n",
+    "            sub_ps[0:m,0:m] = padded_phase_screen[i:i+m,j:j+m]\n",
+    "            sub_R[0:m,0:m] = padded_R[i:i+m,j:j+m]  \n",
+    "            sub_sp = np.sum(sub_R)*dxp**2\n",
+    "            apsf = mathft.ft2(sub_R*np.exp(-1j *sub_R*sub_ps),delta=1./dxp)/sub_sp\n",
+    "            padded_lightfield[i:i+m,j:j+m] = np.abs(apsf[pad*m//2-m//2:pad*m//2+m//2,pad*m//2-m//2:pad*m//2+m//2])**2\n",
+    "        k +=1\n",
+    "\n",
+    "### 2. Computing the spot centres\n",
+    "Xr = np.zeros_like(Xc)\n",
+    "Yr = np.zeros_like(Xc)\n",
+    "Xs = np.linspace(0 ,padded_dim-1,padded_dim)\n",
+    "xx, yy = np.meshgrid(Xs,Xs)\n",
+    "\n",
+    "XI = xx*padded_lightfield\n",
+    "YI = yy*padded_lightfield\n",
+    "k = 0\n",
+    "for i in range(0, padded_dim, m):\n",
+    "    for j in range(0, padded_dim, m):\n",
+    "        if int(active_lenslet_matrix_1D[k]) == 1:\n",
+    "            Xr[k] = XI[i:i+m,j:j+m].sum()/padded_lightfield[i:i+m,j:j+m].sum()\n",
+    "            Yr[k] = YI[i:i+m,j:j+m].sum()/padded_lightfield[i:i+m,j:j+m].sum()\n",
+    "        k +=1\n",
+    "\n",
+    "### 2. Extract the WF slopes\n",
+    "DwDx = ((Xr-Xc)/focal_length).reshape(N,N)\n",
+    "DwDy = ((Yr-Yc)/focal_length).reshape(N,N)\n",
+    "end = time.time()\n",
+    "\n",
+    "print(\"Processingtime :\",\n",
+    "      (end-start) * 10**3, \"ms\")\n",
+    "\n",
+    "# plt.close(8)\n",
+    "# plt.figure(8)\n",
+    "# plt.imshow(DwDy)\n",
+    "# plt.title(\"padded lightfield\")\n",
+    "# plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Wavefront slope"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
