--- a/temp.ipynb
+++ b/temp.ipynb
@@ -13,6 +13,8 @@
    "source": [
     "%matplotlib ipympl\n",
     "import matplotlib.pyplot as plt\n",
+    "from ows import fouriertransform as mathft\n",
+    "\n",
     "import numpy as np\n",
     "from numpy.fft import  ifft2, ifftshift\n",
     "from numpy.random import default_rng as randn\n",
@@ -20,6 +22,7 @@
     "from ipywidgets import interact, widgets\n",
     "from ows import ows\n",
     "import time\n",
+    "from scipy import signal\n",
     "\n",
     "rad2asec = 3600 * 180/np.pi\n",
     "asec2rad = 1/rad2asec"
@@ -87,8 +90,6 @@
    "source": [
     "SEED = 1\n",
     "\n",
-    "\n",
-    "\n",
     "[phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True)\n",
     "\n",
     "\n",
@@ -105,6 +106,45 @@
     "# plt.title(\"PSF^(1/2)\")\n",
     "# plt.colorbar()\n",
     "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Long exposure PSF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.special import gamma, kv\n",
+    "\n",
+    "def telescope_otf(nu_n, epsilon):\n",
+    "    otf = np.zeros_like(nu_n)\n",
+    "    mask = nu_n <= 1\n",
+    "    otf[mask] = (2 / np.pi) * (np.arccos(nu_n[mask]) - nu_n[mask] * np.sqrt(1 - nu_n[mask]**2))\n",
+    "    return otf\n",
+    "\n",
+    "def D_phi(rho):\n",
+    "        alpha = 0.17166136\n",
+    "        term1 = 1.0056349\n",
+    "        x = 2 * np.pi * rho / L0\n",
+    "        term2 = (x ** (5/6)) * kv(5/6, x)\n",
+    "        return alpha * (L0 / r0) ** (5/3) * (term1 - term2)\n",
+    "\n",
+    "nu = np.fft.fftfreq(dimmat, d=dxp)\n",
+    "nu_x, nu_y = np.meshgrid(nu, nu)\n",
+    "nu_r = np.sqrt(nu_x**2 + nu_y**2)\n",
+    "nu_n = nu_r * wl / D\n",
+    "rho = wl * nu_r\n",
+    "plt.close(1)\n",
+    "plt.figure(1)\n",
+    "plt.imshow(D_phi(rho))\n",
+    "plt.show()"
    ]
   },
   {
