implemented some ML, no enough horseopwer to get anything out

--- a/optics.ipynb
+++ b/optics.ipynb
@@ -7,22 +7,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
+    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "from ows import fouriertransform as mathft\n",
+    "from astropy.io import fits\n",
     "\n",
     "import numpy as np\n",
-    "from numpy.fft import  ifft2, ifftshift\n",
-    "from numpy.random import default_rng as randn\n",
-    "#from scipy.special import kv as beselk\n",
-    "from ipywidgets import interact, widgets\n",
     "from ows import ows\n",
     "import time\n",
-    "from scipy import signal\n",
     "\n",
     "rad2asec = 3600 * 180/np.pi\n",
     "asec2rad = 1/rad2asec"
@@ -38,18 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Miminum matrix dimention : 22.627416997969522\n"
+     ]
+    }
+   ],
    "source": [
-    "start = time.time()\n",
+    "\n",
     "# Input\n",
     "\n",
     "dimmat = 128\n",
-    "dxp = 0.003222887597610881 # Pupil plane pixel size\n",
+    "dxp = 0.00353222887597610881 # Pupil plane pixel size\n",
     "r0 = .1\n",
     "L0 = 27\n",
-    "D = 4\n",
+    "D = .1\n",
     "wl = 500e-9 # [m]\n",
     "\n",
     "# Computing limit values\n",
@@ -84,35 +88,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing:  0 % done\n",
+      "Processing:  10 % done\n",
+      "Processing:  20 % done\n",
+      "Processing:  30 % done\n",
+      "Processing:  40 % done\n",
+      "Processing:  50 % done\n",
+      "Processing:  60 % done\n",
+      "Processing:  70 % done\n",
+      "Processing:  80 % done\n",
+      "Processing:  90 % done\n",
+      "Processingtime : 14939.313411712646 ms\n"
+     ]
+    }
+   ],
    "source": [
+    "start = time.time()\n",
+    "\n",
     "SEED = None\n",
     "\n",
-    "[phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True)\n",
+    "F = 8e-3 #[m]\n",
+    "N = 16\n",
+    "\n",
+    "status = 0\n",
+    "n = 101\n",
+    "for i in range(n):\n",
+    "    [phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True)\n",
+    "    filename = 'data/psf_'+str(i)+'.fits'\n",
+    "    fits.writeto(filename, ows.normalize(psf)*256, overwrite=True)\n",
+    "\n",
+    "    [lightfield, DwDx, DwDy] = ows.SHWFS(dimmat, N, F, wl, pupil_mask, R, phase_screen, dxp, lenslet_pad=4)\n",
+    "    lightfield = ows.normalize(lightfield)*256\n",
+    "    \n",
+    "    filename = 'data/lightfield_'+str(i)+'.fits'\n",
+    "    fits.writeto(filename, lightfield, overwrite=True)    \n",
+    "    filename = 'data/DwDx_'+str(i)+'.fits'\n",
+    "    fits.writeto(filename, DwDx, overwrite=True)\n",
+    "    filename = 'data/DwDy_'+str(i)+'.fits'\n",
+    "    fits.writeto(filename, DwDy, overwrite=True)\n",
+    "\n",
+    "    \n",
+    "    if 100*i//n == status*10:\n",
+    "        print('Processing: ',status*10,'% done')\n",
+    "        status += 1\n",
+    "\n",
+    "end = time.time()\n",
+    "\n",
+    "print(\"Processingtime :\",\n",
+    "      (end-start) * 10**3, \"ms\")\n",
+    "\n",
     "\n",
     "\n",
     "# plt.close(4)\n",
     "# plt.figure(4)\n",
-    "# plt.imshow(phase_screen.real)\n",
+    "# plt.imshow(lightfield)\n",
     "# plt.title(\"phase screen\")\n",
     "# plt.colorbar()\n",
     "# plt.show()\n",
     "\n",
-    "plt.close(5)\n",
-    "plt.figure(5)\n",
-    "plt.imshow((np.abs(psf)**(1/2)))\n",
-    "plt.title(\"PSF^(1/2)\")\n",
-    "plt.colorbar()\n",
-    "plt.show()\n"
+    "# plt.close(5)\n",
+    "# plt.figure(5)\n",
+    "# plt.imshow(psf**(1/1))\n",
+    "# plt.title(\"PSF^(1/2)\")\n",
+    "# plt.colorbar()\n",
+    "# plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Long exposure PSF"
+    "# Long exposure PSF\n",
+    "\n",
+    "Something fishy going on. Too suceptible to dimmat"
    ]
   },
   {
@@ -121,73 +176,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import gamma, kv\n",
+    "# dimmat = 128\n",
+    "# delta_nu = 2*D/(dimmat*wl)  # Angular frequency sampling\n",
+    "# nu_x = np.linspace(-dimmat/2, dimmat/2-1, dimmat) * delta_nu\n",
+    "# NU_X, NU_Y = np.meshgrid(nu_x, nu_x)\n",
+    "# nu = np.sqrt(NU_X**2 + NU_Y**2)\n",
+    "# nu_n = nu * wl / D\n",
+    "\n",
+    "# otf_tsc = ows.telescope_otf(nu_n)\n",
+    "# otf_atm = ows.atmospheric_otf(nu, r0, L0, wl)\n",
+    "\n",
+    "# otf_sl = otf_atm * otf_tsc\n",
+    "\n",
+    "# strehl = np.sum(otf_sl) / np.sum(otf_tsc)\n",
+    "\n",
+    "# padding = 2\n",
+    "# otf_sl_pad = np.zeros((padding*dimmat,padding*dimmat))\n",
+    "# otf_sl_pad[0:dimmat,0:dimmat] = otf_sl\n",
+    "# longpsf = np.abs(np.fft.fftshift(np.fft.ifft2(np.fft.ifftshift(otf_sl_pad))))[dimmat-dimmat//2:dimmat+dimmat//2,dimmat-dimmat//2:dimmat+dimmat//2]\n",
+    "# longpsf = ows.normalize(longpsf)\n",
+    "# longpsf = longpsf#*strehl\n",
+    "\n",
+    "# otf_tsc_pad = np.zeros((padding*dimmat,padding*dimmat))\n",
+    "# otf_tsc_pad[0:dimmat,0:dimmat] = otf_tsc\n",
+    "# idealpsf = np.abs(np.fft.fftshift(np.fft.ifft2(np.fft.ifftshift(otf_tsc_pad))))[dimmat-dimmat//2:dimmat+dimmat//2,dimmat-dimmat//2:dimmat+dimmat//2]\n",
+    "# idealpsf = ows.normalize(idealpsf)\n",
     "\n",
     "\n",
-    "def phase_structure_function(rho, r0, L0):\n",
-    "    # Constants for the von Karman model\n",
-    "    coef = 0.17166136 * (L0/r0)**(5/3)\n",
-    "    const_term = 1.0056349\n",
-    "    # Handle the case where rho is zero\n",
-    "    D_phi = np.zeros_like(rho)\n",
-    "    mask = rho > 0\n",
-    "    # Apply the formula for non-zero rho\n",
-    "    x = 2*np.pi*rho[mask]/L0\n",
-    "    D_phi[mask] = coef * (const_term - x**(5/6) * kv(5/6, x))\n",
-    "    return D_phi\n",
-    "\n",
-    "def telescope_otf(nu_n):\n",
-    "    # Plain pupil case (no central obscuration)\n",
-    "    otf = np.zeros_like(nu_n)\n",
-    "    mask = nu_n <= 1\n",
-    "    otf[mask] = (2/np.pi) * (np.arccos(nu_n[mask]) - nu_n[mask] * np.sqrt(1 - nu_n[mask]**2))\n",
-    "    return otf\n",
-    "    \n",
-    "def atmospheric_otf(nu, r0, L0, wavelength):\n",
-    "    rho = wavelength * nu\n",
-    "    D_phi = phase_structure_function(rho, r0, L0)\n",
-    "    otf_atm = np.exp(-0.5 * D_phi)\n",
-    "    return otf_atm\n",
-    "\n",
-    "\n",
-    "N = dimmat\n",
-    "\n",
-    "# Grid for OTF (frequency domain)\n",
-    "delta_nu = 2*D/(N*wl)  # Angular frequency sampling\n",
-    "nu_x = np.linspace(-N/2, N/2-1, N) * delta_nu\n",
-    "NU_X, NU_Y = np.meshgrid(nu_x, nu_x)\n",
-    "nu = np.sqrt(NU_X**2 + NU_Y**2)\n",
-    "nu_n = nu * wl / D\n",
-    "\n",
-    "otf_tsc = telescope_otf(nu_n)\n",
-    "otf_atm = atmospheric_otf(nu, r0, L0, wl)\n",
-    "\n",
-    "\n",
-    "delta_x = wl / (2 * D)\n",
-    "x = np.linspace(-N/2, N/2-1, N) * delta_x\n",
-    "X, Y = np.meshgrid(x, x)\n",
-    "rho_spatial = np.sqrt(X**2 + Y**2)\n",
-    "\n",
-    "\n",
-    "\n",
-    "otf_sl = otf_atm * otf_tsc\n",
-    "\n",
-    "\n",
-    "otf_sl_pad = np.zeros((2*N,2*N))\n",
-    "otf_sl_pad[0:N,0:N] = otf_sl\n",
-    "\n",
-    "\n",
-    "\n",
-    "psf = np.abs(np.fft.fftshift(np.fft.ifft2(np.fft.ifftshift(otf_sl_pad))))\n",
-    "psf = psf / np.max(psf)\n",
-    "\n",
-    "plt.close(1)\n",
-    "plt.figure(1)\n",
-    "plt.imshow(psf)\n",
-    "plt.title(\"1\")\n",
+    "# plt.close(1)\n",
+    "# plt.figure(1)\n",
+    "# plt.imshow(psf_stack**(1/2))\n",
+    "# plt.title(\"1\")\n",
     "# plt.colorbar()\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "# plt.show()\n",
+    "\n",
+    "\n",
+    "# fits.writeto('data/longpsf.fits', longpsf, overwrite=True)\n"
    ]
   },
   {
@@ -247,21 +271,17 @@
     "\n",
     "### 1. focussing the sub-apetures + aperture centres\n",
     "F = 8e-3 #[m]\n",
-    "N = 18\n",
-    "\n",
-    "\n",
+    "N = 16\n",
     "\n",
     "[lightfield, DwDx, DyDx] = ows.SHWFS(dimmat, N, F, wl, pupil_mask, R, phase_screen, dxp, lenslet_pad=4)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "end = time.time()\n",
     "\n",
     "print(\"Processingtime :\",\n",
     "      (end-start) * 10**3, \"ms\")\n",
     "\n",
-    "lightfield = normalize(lightfield)\n",
+    "\n",
+    "lightfield = ows.normalize(lightfield)\n",
     "\n",
     "plt.close(8)\n",
     "plt.figure(8)\n",
@@ -294,13 +314,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.io import fits\n",
-    "\n",
-    "def normalize(data):\n",
-    "    min_val = np.min(data)\n",
-    "    max_val = np.max(data)\n",
-    "    return (data - min_val) / (max_val - min_val)\n",
-    "\n",
     "# phase_screen_normilized = normalize(phase_screen)\n",
     "# psf_normalized = normalize(psf)\n",
     "\n",
