fixed pupil padding with the phase screen

--- a/optics.ipynb
+++ b/optics.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Miminum matrix dimention : 22.627416997969522\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Input\n",
     "\n",
     "dimmat = 128\n",
-    "dxp = 0.00353222887597610881 # Pupil plane pixel size\n",
+    "dxp = 0.0042 # Pupil plane pixel size\n",
     "r0 = .1\n",
     "L0 = 27\n",
     "D = .1\n",
@@ -88,27 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing:  0 % done\n",
-      "Processing:  10 % done\n",
-      "Processing:  20 % done\n",
-      "Processing:  30 % done\n",
-      "Processing:  40 % done\n",
-      "Processing:  50 % done\n",
-      "Processing:  60 % done\n",
-      "Processing:  70 % done\n",
-      "Processing:  80 % done\n",
-      "Processing:  90 % done\n",
-      "Processingtime : 14939.313411712646 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = time.time()\n",
     "\n",
@@ -116,49 +90,55 @@
     "\n",
     "F = 8e-3 #[m]\n",
     "N = 16\n",
+    "PD = [dimmat//2-1,0]\n",
     "\n",
-    "status = 0\n",
-    "n = 101\n",
+    "\n",
+    "# Prepare seeing limited psf for normalization. It could be done inside ows.phase_screen() with the OTF directly but is not in order not to compute it every time\n",
+    "\n",
+    "psf_normalization_factor = ows.calculate_diffLim_psf(PD, dimmat, dxp).max()\n",
+    "\n",
+    "\n",
+    "# status = 0\n",
+    "n = 1\n",
     "for i in range(n):\n",
-    "    [phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED, PUPIL = True)\n",
-    "    filename = 'data/psf_'+str(i)+'.fits'\n",
-    "    fits.writeto(filename, ows.normalize(psf)*256, overwrite=True)\n",
+    "    [phase_screen, psf, pupil_mask, R] = ows.phase_screen(PSD, dxp, SEED,PD=[0,0], PUPIL = True)\n",
+    "    # filename = 'data/psf_'+str(i)+'.fits'\n",
+    "    # fits.writeto(filename, ows.normalize(psf)*256, overwrite=True)\n",
     "\n",
-    "    [lightfield, DwDx, DwDy] = ows.SHWFS(dimmat, N, F, wl, pupil_mask, R, phase_screen, dxp, lenslet_pad=4)\n",
-    "    lightfield = ows.normalize(lightfield)*256\n",
+    "    [lightfield, DwDx, DwDy] = ows.SHWFS(dimmat//2, N, F, wl, pupil_mask, R, phase_screen, dxp, lenslet_pad=4)\n",
+    "    # lightfield = ows.normalize(lightfield)*256\n",
     "    \n",
-    "    filename = 'data/lightfield_'+str(i)+'.fits'\n",
-    "    fits.writeto(filename, lightfield, overwrite=True)    \n",
-    "    filename = 'data/DwDx_'+str(i)+'.fits'\n",
-    "    fits.writeto(filename, DwDx, overwrite=True)\n",
-    "    filename = 'data/DwDy_'+str(i)+'.fits'\n",
-    "    fits.writeto(filename, DwDy, overwrite=True)\n",
+    "    # filename = 'data/lightfield_'+str(i)+'.fits'\n",
+    "    # fits.writeto(filename, lightfield, overwrite=True)    \n",
+    "    # filename = 'data/DwDx_'+str(i)+'.fits'\n",
+    "    # fits.writeto(filename, DwDx, overwrite=True)\n",
+    "    # filename = 'data/DwDy_'+str(i)+'.fits'\n",
+    "    # fits.writeto(filename, DwDy, overwrite=True)\n",
     "\n",
     "    \n",
-    "    if 100*i//n == status*10:\n",
-    "        print('Processing: ',status*10,'% done')\n",
-    "        status += 1\n",
+    "    # if 100*i//n == status*10:\n",
+    "    #     print('Processing: ',status*10,'% done')\n",
+    "    #     status += 1\n",
     "\n",
     "end = time.time()\n",
+    "\n",
     "\n",
     "print(\"Processingtime :\",\n",
     "      (end-start) * 10**3, \"ms\")\n",
     "\n",
+    "plt.close(4)\n",
+    "plt.figure(4)\n",
+    "plt.imshow(phase_screen)\n",
+    "plt.title(\"phase screen\")\n",
+    "#plt.colorbar()\n",
+    "plt.show()\n",
     "\n",
-    "\n",
-    "# plt.close(4)\n",
-    "# plt.figure(4)\n",
-    "# plt.imshow(lightfield)\n",
-    "# plt.title(\"phase screen\")\n",
-    "# plt.colorbar()\n",
-    "# plt.show()\n",
-    "\n",
-    "# plt.close(5)\n",
-    "# plt.figure(5)\n",
-    "# plt.imshow(psf**(1/1))\n",
-    "# plt.title(\"PSF^(1/2)\")\n",
-    "# plt.colorbar()\n",
-    "# plt.show()\n"
+    "plt.close(5)\n",
+    "plt.figure(5)\n",
+    "plt.imshow(psf)\n",
+    "plt.title(\"PSF^(1/2)\")\n",
+    "plt.colorbar()\n",
+    "plt.show()\n"
    ]
   },
   {
